feat (usuario): endpoint de update
